--- a/WebContent/registrarse.xhtml
+++ b/WebContent/registrarse.xhtml
@@ -5,17 +5,15 @@
 	xmlns:p="http://primefaces.org/ui"
 	template="/templates/template-general.xhtml">
 
-	<ui:define name="titulo">
-      #{msgs.tituloHead}
-    </ui:define>
+	<ui:define name="titulo">Registrarse</ui:define>
 
-	<ui:define name="cuerpo">
-		<p:panel header="#{msgs.tituloOperacionError}">
-		 <h1>#{msgs.mensajeError1}</h1>
-		 <p>#{msgs.mensajeError2}</p>
-		 <p>#{msgs.mensajeError3}</p>
-		 </p:panel>
+	<ui:define name="navegacion">
+		<ui:include src="/snippets/navegacion-sin-sesion.xhtml" />
 	</ui:define>
-
+	
+	<ui:define name="cuerpo">
+		<ui:include src="/snippets/form-registro.xhtml"/>
+	</ui:define>
+	
 
 </ui:composition>
