Intentando hacer lógica y persistencia

--- a/WebContent/registrarse.xhtml
+++ b/WebContent/registrarse.xhtml
@@ -12,7 +12,11 @@
 	</ui:define>
 	
 	<ui:define name="cuerpo">
+		<h:form id="form-registro">
+		<p:panel id="panelalta" header="#{msgs.registrarse}">
 		<ui:include src="/snippets/form-registro.xhtml"/>
+		</p:panel>
+		</h:form>
 	</ui:define>
 	
 
