--- a/WebContent/snippets/form-registro.xhtml
+++ b/WebContent/snippets/form-registro.xhtml
@@ -76,13 +76,15 @@
 			<p:message for="confContraseña" />
 		</h:panelGroup>
 
-		<!--  	<p:commandButton id="boton" value="#{msgs.botonRegistro}"
-			action="#{controller.registro}" update="Grid" process="@form">
-		</p:commandButton>
-		
-		-->
-
 	</p:panelGrid>
+
+
+
+	<p:commandButton id="boton" value="#{msgs.botonRegistro}">
+
+	</p:commandButton>
+
+	<!-- action="#{controller.registro}" update="Grid" process="@form"-->
 
 </ui:composition>
 
