--- a/WebContent/snippets/form-registro.xhtml
+++ b/WebContent/snippets/form-registro.xhtml
@@ -9,9 +9,9 @@
 
 #{msgs.identificador}
   <h:panelGroup>
-			<p:inputText value="#{alumno.iduser}" required="true"
-				requiredMessage="#{msgs.formAlta_iduser_requiredMessage}"
-				validatorMessage="#{msgs.formAlta_iduser_validatorMessage}"
+			<p:inputText value="#{user.login}" required="true"
+				requiredMessage="#{msgs.formAlta_login_requiredMessage}"
+				validatorMessage="#{msgs.formAlta_login_validatorMessage}"
 				id="iduser">
 				<f:validateLength minimum="5" maximum="8" />
 			</p:inputText>
@@ -19,10 +19,9 @@
 		</h:panelGroup>
 
 
-	
   #{msgs.nombre} 
   <h:panelGroup>
-			<p:inputText value="#{alumno.nombre}" required="true"
+			<p:inputText value="#{user.name}" required="true"
 				requiredMessage="#{msgs.formAlta_nombre_requiredMessage}"
 				validatorMessage="#{msgs.formAlta_nombre_validatorMessage}"
 				id="nombre">
@@ -33,7 +32,7 @@
   
   #{msgs.apellidos} 
   <h:panelGroup>
-			<p:inputText value="#{alumno.apellidos}" required="true"
+			<p:inputText value="#{user.surname}" required="true"
 				requiredMessage="#{msgs.formAlta_apellidos_requiredMessage}"
 				validatorMessage="#{msgs.formAlta_apellidos_validatorMessage}"
 				id="apellidos">
@@ -44,7 +43,7 @@
   
   #{msgs.email}
   <h:panelGroup>
-			<p:inputText value="#{alumno.email}" required="true"
+			<p:inputText value="#{user.email}" required="true"
 				requiredMessage="#{msgs.formAlta_correo_requiredMessage}"
 				validatorMessage="#{msgs.formAlta_correo_validatorMessage}"
 				id="correo">
@@ -56,7 +55,7 @@
 	
 	 #{msgs.contraseña} 
   <h:panelGroup>
-			<p:inputText value="#{alumno.contraseña}" required="true"
+			<p:inputText value="#{user.password}" required="true"
 				requiredMessage="#{msgs.formAlta_contraseña_requiredMessage}"
 				validatorMessage="#{msgs.formAlta_contraseña_validatorMessage}"
 				id="contraseña">
@@ -67,7 +66,7 @@
 		
 		 #{msgs.confirmarContraseña} 
   <h:panelGroup>
-			<p:inputText value="#{alumno.confContraseña}" required="true"
+			<p:inputText value="#{user.confPassword}" required="true"
 				requiredMessage="#{msgs.formAlta_confContraseña_requiredMessage}"
 				validatorMessage="#{msgs.formAlta_confContraseña_validatorMessage}"
 				id="confContraseña">
@@ -78,13 +77,11 @@
 
 	</p:panelGrid>
 
-
-
-	<p:commandButton id="boton" value="#{msgs.botonRegistro}">
-
+ 
+	<p:commandButton id="boton" value="#{msgs.botonRegistro}"
+	action="#{controller.registrar()}" update="Grid" process="@form">
 	</p:commandButton>
 
-	<!-- action="#{controller.registro}" update="Grid" process="@form"-->
 
 </ui:composition>
 
