Registro funciona bien cuando le da la gana

--- a/WebContent/snippets/form-registro.xhtml
+++ b/WebContent/snippets/form-registro.xhtml
@@ -75,10 +75,10 @@
 
 	</p:panelGrid>
 
- 
 	<p:commandButton id="boton" value="#{msgs.botonRegistro}"
-	action="#{controller.registrar()}">
-	</p:commandButton>
+	action="#{controller.registrar}">
+	</p:commandButton> 
+	
 
 
 </ui:composition>
