--- a/WebContent/login.xhtml
+++ b/WebContent/login.xhtml
@@ -11,4 +11,8 @@
 		<ui:include src="/snippets/navegacion-sin-sesion.xhtml" />
 	</ui:define>
 
+	<ui:define name="cuerpo">
+		<ui:include src="/snippets/login-form.xhtml" />
+	</ui:define>
+
 </ui:composition>
