Lista de viajes ordenada

--- a/WebContent/snippets/navegacion-sin-sesion.xhtml
+++ b/WebContent/snippets/navegacion-sin-sesion.xhtml
@@ -12,7 +12,7 @@
 				<f:param name="i" value="1" />
 			</p:menuitem>
 			<p:menuitem value="#{msgs.listado}"
-			action="#{trips.obtenerViajes}">
+			action="#{trips.obtenerViajesDisponibles}">
 				<f:param name="i" value="2" />
 			</p:menuitem>
 			<p:menuitem value="#{msgs.nosotros}">
