--- a/WebContent/snippets/navegacion-sin-sesion.xhtml
+++ b/WebContent/snippets/navegacion-sin-sesion.xhtml
@@ -20,7 +20,7 @@
 			</p:menuitem>
 
 				<p:submenu style="float:right" label="#{msgs.textoIdioma}"
-					icon="ui-icon-document">
+					icon="ui-icon-flag">
 					<p:menuitem id="linkespa" value="#{msgs.enlaceIdiomaES}"
 						actionListener="#{settings.setSpanish}" update="@all" />
 					<p:menuitem id="linkingles" value="#{msgs.enlaceIdiomaEN}"
