Cambios controller y empezando Mas datos Viaje

--- a/WebContent/listaViajes.xhtml
+++ b/WebContent/listaViajes.xhtml
@@ -63,7 +63,7 @@
 	</p:column>
 
 				<p:column>
-					<h:commandLink>
+					<h:commandLink action="#{controller.mostrarDatosViaje(viaje)}">
 							#{msgs.masDatosViaje}
 					</h:commandLink>
 
