--- a/WebContent/snippets/login-form.xhtml
+++ b/WebContent/snippets/login-form.xhtml
@@ -3,7 +3,7 @@
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:p="http://primefaces.org/ui">
-	<h:form>
+	<h:form style="float:center;height: 18px; width: 20px">
 	<p:panelGrid id="Grid" columns="2" cellpadding="5">
 		#{msgs.login_form_name_label}: 
 		<h:panelGroup>
