--- a/WebContent/principal.xhtml
+++ b/WebContent/principal.xhtml
@@ -13,7 +13,7 @@
 	
 	<ui:define name="cuerpo">
 	
-	<h1>Bienvenido #{user.name}!</h1>
+	<h1>Bienvenido #{LOGGEDIN_USER.name}!</h1>
 	
 	</ui:define>
 		
