--- a/WebContent/datosViaje.xhtml
+++ b/WebContent/datosViaje.xhtml
@@ -105,7 +105,7 @@
             <h:outputText value="#{msgs.nombre}:" />
             <h:outputText value="#{participante.name}" />
  
-            <h:outputText value="#{msgs.surname}:" />
+            <h:outputText value="#{msgs.apellidos}:" />
             <h:outputText value="#{participante.surname}" />
  
             <h:outputText value="#{msgs.email}" />
@@ -113,9 +113,6 @@
  
         </p:panelGrid>
  
-        <f:facet name="footer">
-               #{msgs.numParticipantes} #{fn:length(controller.participantes)}
-        </f:facet>
     </p:carousel>
 
 <p:panelGrid  id="GridParticipantes" columns="2" cellpadding="5">
