--- a/WebContent/datosViaje.xhtml
+++ b/WebContent/datosViaje.xhtml
@@ -12,7 +12,7 @@
 	</ui:define>
 	
 	<ui:define name="cuerpo">
-	<h2>Datos del Viaje</h2>
+	<h2>#{msgs.datosViaje}</h2>
 		
 <p:panelGrid id="Grid" columns="2" cellpadding="5">
 
@@ -69,7 +69,7 @@
 
 </p:panelGrid>
 
-<h2>Datos del Promotor</h2>
+<h2>#{msgs.datosPromotor}</h2>
 
 <p:panelGrid id="GridPromotor" columns="2" cellpadding="5">
 
@@ -99,7 +99,7 @@
 
 </p:panelGrid>
 
-<p:carousel value="#{controller.participantes}" headerText="Datos participantes" var="participante" itemStyle="text-align:center" responsive="true">
+<p:carousel value="#{controller.participantes}" headerText="#{msgs.datosParticipantes}" var="participante" itemStyle="text-align:center" responsive="true">
         <p:panelGrid columns="2" style="width:100%;margin:10px 0px" columnClasses="label,value" layout="grid" styleClass="ui-panelgrid-blank">
 
             <h:outputText value="#{msgs.nombre}:" />
