--- a/WebContent/listaViajesPublico.xhtml
+++ b/WebContent/listaViajesPublico.xhtml
@@ -5,7 +5,7 @@
 	xmlns:p="http://primefaces.org/ui"
 	template="/templates/template-general.xhtml">
 
-	<ui:define name="titulo">Principal</ui:define>
+	<ui:define name="titulo">#{msgs.ListaViajes}</ui:define>
 
 	<ui:define name="navegacion">
 		<ui:include src="/snippets/navegacion-sin-sesion.xhtml" />
