--- a/WebContent/misViajes.xhtml
+++ b/WebContent/misViajes.xhtml
@@ -5,7 +5,7 @@
 	xmlns:p="http://primefaces.org/ui"
 	template="/templates/template-general.xhtml">
 
-	<ui:define name="titulo">#{msgs.DatosViaje}</ui:define>
+	<ui:define name="titulo">#{msgs.MisViajes}</ui:define>
 
 	<ui:define name="navegacion">
 		<ui:include src="/snippets/navegacion-con-sesion.xhtml" />
