--- a/WebContent/registrarse.xhtml
+++ b/WebContent/registrarse.xhtml
@@ -5,7 +5,7 @@
 	xmlns:p="http://primefaces.org/ui"
 	template="/templates/template-general.xhtml">
 
-	<ui:define name="titulo">Registrarse</ui:define>
+	<ui:define name="titulo">#{msgs.Registrarse}</ui:define>
 
 	<ui:define name="navegacion">
 		<ui:include src="/snippets/navegacion-sin-sesion.xhtml" />
