--- a/WebContent/snippets/listadoViajes.xhtml
+++ b/WebContent/snippets/listadoViajes.xhtml
@@ -54,7 +54,7 @@
 	</p:column>
 
 				<p:column>
-					<h:commandLink action="#{controller.mostrarDatosViaje(viaje)}">
+					<h:commandLink action="#{trips.mostrarDatosViaje(viaje)}">
 							#{msgs.masDatosViaje}
 					</h:commandLink>
 
