--- a/WebContent/datosViaje.xhtml
+++ b/WebContent/datosViaje.xhtml
@@ -119,11 +119,14 @@
 
 </p:panelGrid>
 
+<h:form>
+
 <p:commandButton value="#{msgs.reservarPlaza}" actionListener="#{trips.apuntarse}"
 action="principal.xhtml"/>
+ 
 
+</h:form>
 
-	
 </ui:define>
 
 
