--- a/WebContent/principal.xhtml
+++ b/WebContent/principal.xhtml
@@ -15,6 +15,8 @@
 	
 	<h1>Bienvenido #{LOGGEDIN_USER.name}!</h1>
 	
+	 <p:growl id="notificaciones" showDetail="true" sticky="true" /> 
+	
 	</ui:define>
 		
 
