Inicio Registrar Viaje

--- a/WebContent/snippets/navegacion-con-sesion.xhtml
+++ b/WebContent/snippets/navegacion-con-sesion.xhtml
@@ -15,6 +15,11 @@
 				<f:param name="i" value="0" />
 			</p:menuitem>
 			
+			<p:menuitem value="#{msgs.registroViaje}"
+			action="/registrarViaje.xhtml">
+				<f:param name="i" value="0" />
+			</p:menuitem>
+			
 			<p:menuitem value="#{msgs.nosotros}">
 				<f:param name="i" value="1" />
 			</p:menuitem>
