--- a/WebContent/snippets/form-registro.xhtml
+++ b/WebContent/snippets/form-registro.xhtml
@@ -57,10 +57,10 @@
 			<p:password placeholder="#{msgs.contraseña}" value="#{user.password}" required="true"
 				requiredMessage="#{msgs.formAlta_contraseña_requiredMessage}"
 				validatorMessage="#{msgs.formAlta_contraseña_validatorMessage}"
-				id="contraseña">
+				id="pass">
 				<f:validateLength maximum="40" minimum="5"/>
 			</p:password>
-			<p:message for="contraseña" />
+			<p:message for="pass" />
 		</h:panelGroup>
 		
 		 #{msgs.confirmarContraseña} 
@@ -68,15 +68,15 @@
 			<p:password value="#{user.confPassword}" placeholder="#{msgs.confirmarContraseña}" required="true"
 				requiredMessage="#{msgs.formAlta_confContraseña_requiredMessage}"
 				validator="#{user.validarContraseñas()}"
-				id="confContraseña">
+				id="confPass">
 			</p:password>
-			<p:message for="confContraseña" styleClass="error"/>
+			<p:message for="confPass" styleClass="error"/>
 		</h:panelGroup>
 
 	
 	</p:panelGrid>
 	
-	<p:commandButton id="boton" value="#{msgs.botonRegistro}"
+	<p:commandButton id="botonRegistro" value="#{msgs.botonRegistro}"
 	action="#{controller.registrar}" update="Grid" process="@form">
 	</p:commandButton> 
 	
