--- a/WebContent/snippets/navegacion-sin-sesion.xhtml
+++ b/WebContent/snippets/navegacion-sin-sesion.xhtml
@@ -3,12 +3,13 @@
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:p="http://primefaces.org/ui">
-	<h:form>
-		<p:menubar activeIndex="#{param.i}">
-			<p:menuitem value="#{msgs.iniciarSesion}" action="/login.xhtml">
+	<h:form id="form-barraNavegacion">
+		<p:menubar activeIndex="#{param.i}" id="barraNavegacion">
+			<p:menuitem value="#{msgs.iniciarSesion}" action="/login.xhtml" id="linklogin">
 				<f:param name="i" value="0" />
 			</p:menuitem>
-			<p:menuitem value="#{msgs.registrarse}" action="/registrarse.xhtml" >
+			<p:menuitem value="#{msgs.registrarse}" action="/registrarse.xhtml" id="linkRegistrarse"
+			actionListener="#{user.iniciaUser}">
 				<f:param name="i" value="1" />
 			</p:menuitem>
 			<p:menuitem value="#{msgs.listado}"
