--- a/WebContent/modificarViaje.xhtml
+++ b/WebContent/modificarViaje.xhtml
@@ -5,14 +5,14 @@
 	xmlns:p="http://primefaces.org/ui"
 	template="/templates/template-general.xhtml">
 
-	<ui:define name="titulo">Registrar Viaje</ui:define>
+	<ui:define name="titulo">Modificar Viaje</ui:define>
 
 	<ui:define name="navegacion">
 		<ui:include src="/snippets/navegacion-con-sesion.xhtml" />
 	</ui:define>
 
 	<ui:define name="cuerpo">
-		<ui:include src="/snippets/form-register-viaje.xhtml" />
-	</ui:define> 
+		<ui:include src="/snippets/form-modificar-viaje.xhtml" />
+	</ui:define>
 
 </ui:composition>
