--- a/WebContent/snippets/navegacion-con-sesion.xhtml
+++ b/WebContent/snippets/navegacion-con-sesion.xhtml
@@ -18,7 +18,8 @@
 			</p:menuitem>
 			
 			<p:menuitem value="#{msgs.registroViaje}"
-			action="/registrarViaje.xhtml">
+			action="/registrarViaje.xhtml"
+			id="registrarViaje">
 				<f:param name="i" value="0" />
 			</p:menuitem>
 			
