--- a/WebContent/misViajes.xhtml
+++ b/WebContent/misViajes.xhtml
@@ -3,6 +3,7 @@
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:p="http://primefaces.org/ui"
+	xmlns:c="http://java.sun.com/jsp/jstl/core"
 	template="/templates/template-general.xhtml">
 
 	<ui:define name="titulo">#{msgs.MisViajes}</ui:define>
@@ -73,17 +74,18 @@
 	
 	</p:column>
 
-			<!--  	<p:column>
-					<h:commandLink action="#{trips.mostrarDatosViaje(viaje)}">
-							#{msgs.masDatosViaje}
-					</h:commandLink>
+	<p:column headerText="#{msgs.OpcionesViaje}">
+	<c:if test="${ modifyTrip.comprobarPromotor(viaje)}">
+		<h:commandLink action="#{trips.mostrarDatosViaje(viaje)}">
+				#{viaje.implicacion}
+		</h:commandLink>
+	</c:if>
+	</p:column>
 
-				</p:column>
--->
 
 
-			</p:dataTable>
-		</h:form>
+	</p:dataTable>
+</h:form>
 		
 
 </p:panelGrid>
