--- a/WebContent/snippets/form-modificar-viaje.xhtml
+++ b/WebContent/snippets/form-modificar-viaje.xhtml
@@ -179,9 +179,9 @@
 			<p:message for="availableSeats" />
 		</h:panelGroup>
 
-		<h:outputText id="msgRegister" value="#{msgs[registerTrip.result]}" />
+		<h:outputText id="msgRegister" value="#{msgs[modifyTrip.result]}" />
 		<p:commandButton value="#{msgs.login_form_button_trip_modify}"
-			action="#{registerTrip.modificarViaje}" update="Grid,Grid2,Grid3" process="@form">
+			action="#{modifyTrip.modificarViaje}" update="Grid,Grid2,Grid3" process="@form">
 		</p:commandButton> 
 	</p:panelGrid>
 
