--- a/WebContent/solicitudesViaje.xhtml
+++ b/WebContent/solicitudesViaje.xhtml
@@ -43,7 +43,7 @@
 			
 				<p:column headerText="#{msgs.OpcionesViaje}">
 				
-					<p:commandLink>
+					<p:commandLink action="#{trip.eliminarSolicitud(persona)}">
 					#{msgs.cancelarSolicitud}
 					</p:commandLink>
 	
