--- a/WebContent/snippets/navegacion-con-sesion.xhtml
+++ b/WebContent/snippets/navegacion-con-sesion.xhtml
@@ -13,12 +13,12 @@
 			
 			<p:menuitem value="#{msgs.misViajes}" 
 			actionListener="#{trips.obtenerViajesImplicado}"
-			action="misViajes.xhtml">
+			action="/restricted/misViajes.xhtml">
 				<f:param name="i" value="0" />
 			</p:menuitem>
 			
 			<p:menuitem value="#{msgs.registroViaje}"
-			action="/registrarViaje.xhtml"
+			action="/restricted/registrarViaje.xhtml"
 			id="registrarViaje">
 				<f:param name="i" value="0" />
 			</p:menuitem>
