--- a/WebContent/registrarse.xhtml
+++ b/WebContent/registrarse.xhtml
@@ -17,13 +17,12 @@
 		
 		
 		<p:panel style="float:right">
-        <h3>¡Registrate hoy y disfruta de todas las ventajas!</h3>
+        <h3>#{msgs.registrateHoy}</h3>
         
 			<ul>
-				<li>Acceso a toda la información de los viajes</li>
-				<li>Alquilar plazas en viajes</li>
-				<li>Registrar tus propios viajes</li>
-				<li>...</li>
+				<li>#{msgs.ventaja1}</li>
+				<li>#{msgs.ventaja2}</li>
+				<li>#{msgs.ventaja3}</li>
 
 			</ul>
 		
