--- a/WebContent/restricted/misViajes.xhtml
+++ b/WebContent/restricted/misViajes.xhtml
@@ -95,7 +95,7 @@
 			</h:commandLink>
 			
 			
-			<h:commandLink rendered="#{modifyTrip.comprobarPromotor(viaje)}" action="#{modifyTrip.mostrarViaje(viaje)}">
+			<h:commandLink rendered="#{modifyTrip.comprobarPromotor(viaje)}" action="#{modifyTrip.mostrarViaje(viaje)}" id="modificar_Viaje">
 				
 				<p style="font-size: 13px">#{msgs.ModificarViaje}</p>
 				
