--- a/WebContent/snippets/navegacion-con-sesion.xhtml
+++ b/WebContent/snippets/navegacion-con-sesion.xhtml
@@ -13,7 +13,7 @@
 			
 			<p:menuitem value="#{msgs.misViajes}" 
 			actionListener="#{trips.obtenerViajesImplicado}"
-			action="/restricted/misViajes.xhtml">
+			action="/restricted/misViajes.xhtml" id="misViajes">
 				<f:param name="i" value="0" />
 			</p:menuitem>
 			
