--- a/WebContent/snippets/navegacion-con-sesion.xhtml
+++ b/WebContent/snippets/navegacion-con-sesion.xhtml
@@ -33,7 +33,7 @@
 				</p:submenu>
 				
 				<p:menuitem value="#{msgs.cerrarSesion}" style="float:right"
-				 action="#{login.closeSession}">
+				 action="#{login.closeSession}" id="cerrarSesion">
 				<f:param name="i" value="2" />
 				</p:menuitem>
 
