Timer mantenimiento BBDD

--- a/WebContent/restricted/datosViaje.xhtml
+++ b/WebContent/restricted/datosViaje.xhtml
@@ -122,7 +122,7 @@
 <h:form>
 
 <p:commandButton value="#{msgs.reservarPlaza}" actionListener="#{trips.apuntarse}"
-action="principal.xhtml"/>
+action="principal.xhtml" id="solicitarPlaza"/>
  
 
 </h:form>
