--- a/WebContent/snippets/navegacion-sin-sesion.xhtml
+++ b/WebContent/snippets/navegacion-sin-sesion.xhtml
@@ -13,7 +13,8 @@
 				<f:param name="i" value="1" />
 			</p:menuitem>
 			<p:menuitem value="#{msgs.listado}"
-			action="#{trips.obtenerViajesDisponibles}">
+			action="#{trips.obtenerViajesDisponibles}"
+			id="listado">
 				<f:param name="i" value="2" />
 			</p:menuitem>
 				<p:submenu id="menu-idiomas" style="float:right" label="#{msgs.textoIdioma}"
