--- a/WebContent/snippets/navegacion-con-sesion.xhtml
+++ b/WebContent/snippets/navegacion-con-sesion.xhtml
@@ -7,7 +7,8 @@
 		<p:menubar activeIndex="#{param.i}">
 			
 			<p:menuitem value="#{msgs.listado}"
-			action="#{trips.obtenerViajesDisponibles}">
+			action="#{trips.obtenerViajesDisponibles}"
+			id="listado">
 				<f:param name="i" value="0" />
 			</p:menuitem>
 			
