Cambios mis viajes

--- a/WebContent/restricted/misViajes.xhtml
+++ b/WebContent/restricted/misViajes.xhtml
@@ -74,6 +74,16 @@
 		#{viaje.estimatedCost}
 	
 	</p:column>
+	
+	
+				<p:column headerText="#{msgs.EstadoViaje}"
+					sortBy="#{viaje.status}">
+				
+				
+		#{viaje.status}
+	
+	</p:column>
+	
 
 
 				<p:column headerText="#{msgs.Implicacion}"
