Cambios para tests

--- a/WebContent/snippets/listadoViajes.xhtml
+++ b/WebContent/snippets/listadoViajes.xhtml
@@ -9,7 +9,8 @@
 				sortMode="multiple" id="tablaViajes">
 
 				<p:column headerText="#{msgs.ciudadOrigen}"
-					sortBy="#{viaje.departure.city}">
+					sortBy="#{viaje.departure.city}"
+					id="ciudadSalida">
 	
 				#{viaje.departure.city}
 	
