--- a/WebContent/snippets/navegacion-sin-sesion.xhtml
+++ b/WebContent/snippets/navegacion-sin-sesion.xhtml
@@ -14,7 +14,7 @@
 			</p:menuitem>
 			<p:menuitem value="#{msgs.listado}"
 			action="#{trips.obtenerViajesDisponibles}"
-			id="listado">
+			id="listadoViajes">
 				<f:param name="i" value="2" />
 			</p:menuitem>
 				<p:submenu id="menu-idiomas" style="float:right" label="#{msgs.textoIdioma}"
