--- a/WebContent/restricted/principal.xhtml
+++ b/WebContent/restricted/principal.xhtml
@@ -13,7 +13,7 @@
 	
 	<ui:define name="cuerpo">
 	
-	<h1>Bienvenido #{LOGGEDIN_USER.name}!</h1>
+	<h1>#{msgs.Welcome} #{LOGGEDIN_USER.name}!</h1>
 	
 	 <p:growl id="notificaciones" showDetail="true" sticky="true" /> 
 	
