--- a/WebContent/snippets/navegacion-con-sesion.xhtml
+++ b/WebContent/snippets/navegacion-con-sesion.xhtml
@@ -6,6 +6,11 @@
 	<h:form>
 		<p:menubar activeIndex="#{param.i}">
 			
+			<p:menuitem value="#{msgs.Principal}" 
+			action="/restricted/principal.xhtml" id="principal">
+				<f:param name="i" value="0" />
+			</p:menuitem>
+			
 			<p:menuitem value="#{msgs.listado}"
 			action="#{trips.obtenerViajesDisponibles}"
 			id="listado">
